src/assets/css/globals/_searchhighlight.scss
@each $key, $val in $tl-color-variations {
  .#{$key} {
    .searchhighlight { // stylelint-disable-line
      color: #{$val};
      background-color: #{mix($val, $colorWhite, 5%)};
    }
    // Invert on modules/atomes that already has the theme-color applied
    .mdl-texthighlight {
      .searchhighlight {
        color: #{mix($val, $colorWhite, 5%)};
        background-color: #{$val};
      }
    }
  }
}

